Prevent scrollbars if scene content fits

--- a/src/index.css
+++ b/src/index.css
@@ -281,7 +281,7 @@ input[type="number"] {
 
 .content {
   flex: 1;
-  overflow-y: scroll;
+  overflow-y: auto;
   -webkit-overflow-scrolling: touch;
 }
 
